fix some layout issues and update preface

--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -504,8 +504,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
+    "scrolled": false,
     "tags": [
      "hide_input"
     ]
@@ -520,62 +521,87 @@
       "Boston house prices dataset\n",
       "---------------------------\n",
       "\n",
-      "**Data Set Characteristics:**  \n",
+      "**Data Set Characteristics:**\n",
       "\n",
-      "    :Number of Instances: 506 \n",
+      "    :Number of Instances: 506\n",
       "\n",
-      "    :Number of Attributes: 13 numeric/categorical predictive. Median Value (attribute 14) is usually the target.\n",
+      "    :Number of Attributes: 13 numeric/categorical predictive.\n",
+      "Median Value (attribute 14) is usually the target.\n",
       "\n",
       "    :Attribute Information (in order):\n",
       "        - CRIM     per capita crime rate by town\n",
-      "        - ZN       proportion of residential land zoned for lots over 25,000 sq.ft.\n",
-      "        - INDUS    proportion of non-retail business acres per town\n",
-      "        - CHAS     Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)\n",
-      "        - NOX      nitric oxides concentration (parts per 10 million)\n",
+      "        - ZN       proportion of residential land zoned for lots\n",
+      "over 25,000 sq.ft.\n",
+      "        - INDUS    proportion of non-retail business acres per\n",
+      "town\n",
+      "        - CHAS     Charles River dummy variable (= 1 if tract\n",
+      "bounds river; 0 otherwise)\n",
+      "        - NOX      nitric oxides concentration (parts per 10\n",
+      "million)\n",
       "        - RM       average number of rooms per dwelling\n",
-      "        - AGE      proportion of owner-occupied units built prior to 1940\n",
-      "        - DIS      weighted distances to five Boston employment centres\n",
+      "        - AGE      proportion of owner-occupied units built prior\n",
+      "to 1940\n",
+      "        - DIS      weighted distances to five Boston employment\n",
+      "centres\n",
       "        - RAD      index of accessibility to radial highways\n",
       "        - TAX      full-value property-tax rate per $10,000\n",
       "        - PTRATIO  pupil-teacher ratio by town\n",
-      "        - B        1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town\n",
+      "        - B        1000(Bk - 0.63)^2 where Bk is the proportion\n",
+      "of blacks by town\n",
       "        - LSTAT    % lower status of the population\n",
-      "        - MEDV     Median value of owner-occupied homes in $1000's\n",
+      "        - MEDV     Median value of owner-occupied homes in\n",
+      "$1000's\n",
       "\n",
       "    :Missing Attribute Values: None\n",
       "\n",
       "    :Creator: Harrison, D. and Rubinfeld, D.L.\n",
       "\n",
       "This is a copy of UCI ML housing dataset.\n",
-      "https://archive.ics.uci.edu/ml/machine-learning-databases/housing/\n",
+      "https://archive.ics.uci.edu/ml/machine-learning-\n",
+      "databases/housing/\n",
       "\n",
       "\n",
-      "This dataset was taken from the StatLib library which is maintained at Carnegie Mellon University.\n",
+      "This dataset was taken from the StatLib library which is\n",
+      "maintained at Carnegie Mellon University.\n",
       "\n",
-      "The Boston house-price data of Harrison, D. and Rubinfeld, D.L. 'Hedonic\n",
-      "prices and the demand for clean air', J. Environ. Economics & Management,\n",
-      "vol.5, 81-102, 1978.   Used in Belsley, Kuh & Welsch, 'Regression diagnostics\n",
-      "...', Wiley, 1980.   N.B. Various transformations are used in the table on\n",
+      "The Boston house-price data of Harrison, D. and Rubinfeld, D.L.\n",
+      "'Hedonic\n",
+      "prices and the demand for clean air', J. Environ. Economics &\n",
+      "Management,\n",
+      "vol.5, 81-102, 1978.   Used in Belsley, Kuh & Welsch, 'Regression\n",
+      "diagnostics\n",
+      "...', Wiley, 1980.   N.B. Various transformations are used in the\n",
+      "table on\n",
       "pages 244-261 of the latter.\n",
       "\n",
-      "The Boston house-price data has been used in many machine learning papers that address regression\n",
-      "problems.   \n",
-      "     \n",
+      "The Boston house-price data has been used in many machine\n",
+      "learning papers that address regression\n",
+      "problems.\n",
+      "\n",
       ".. topic:: References\n",
       "\n",
-      "   - Belsley, Kuh & Welsch, 'Regression diagnostics: Identifying Influential Data and Sources of Collinearity', Wiley, 1980. 244-261.\n",
-      "   - Quinlan,R. (1993). Combining Instance-Based and Model-Based Learning. In Proceedings on the Tenth International Conference of Machine Learning, 236-243, University of Massachusetts, Amherst. Morgan Kaufmann.\n",
+      "   - Belsley, Kuh & Welsch, 'Regression diagnostics: Identifying\n",
+      "Influential Data and Sources of Collinearity', Wiley, 1980.\n",
+      "244-261.\n",
+      "   - Quinlan,R. (1993). Combining Instance-Based and Model-Based\n",
+      "Learning. In Proceedings on the Tenth International Conference of\n",
+      "Machine Learning, 236-243, University of Massachusetts, Amherst.\n",
+      "Morgan Kaufmann.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "from sklearn import datasets\n",
-    "from textwrap import wrap\n",
-    "from pprint import pprint\n",
+    "from textwrap import TextWrapper\n",
+    "\n",
+    "wrapper = TextWrapper(width=65, replace_whitespace=False, break_long_words=False)\n",
+    "def wrap_print(string):\n",
+    "    for line in string.split('\\n'):\n",
+    "        print('\\n'.join(wrapper.wrap(line)))\n",
     "\n",
     "boston = datasets.load_boston()\n",
-    "print(boston.DESCR)"
+    "wrap_print(boston.DESCR)"
    ]
   },
   {
@@ -875,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "tags": [
      "hide_input"
@@ -894,7 +920,8 @@
       "**Data Set Characteristics:**\n",
       "\n",
       "    :Number of Instances: 150 (50 in each of three classes)\n",
-      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
+      "    :Number of Attributes: 4 numeric, predictive attributes and\n",
+      "the class\n",
       "    :Attribute Information:\n",
       "        - sepal length in cm\n",
       "        - sepal width in cm\n",
@@ -904,7 +931,7 @@
       "                - Iris-Setosa\n",
       "                - Iris-Versicolour\n",
       "                - Iris-Virginica\n",
-      "                \n",
+      "\n",
       "    :Summary Statistics:\n",
       "\n",
       "    ============== ==== ==== ======= ===== ====================\n",
@@ -922,31 +949,46 @@
       "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
       "    :Date: July, 1988\n",
       "\n",
-      "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
-      "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
+      "The famous Iris database, first used by Sir R.A. Fisher. The\n",
+      "dataset is taken\n",
+      "from Fisher's paper. Note that it's the same as in R, but not as\n",
+      "in the UCI\n",
       "Machine Learning Repository, which has two wrong data points.\n",
       "\n",
       "This is perhaps the best known database to be found in the\n",
-      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
-      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
-      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
+      "pattern recognition literature.  Fisher's paper is a classic in\n",
+      "the field and\n",
+      "is referenced frequently to this day.  (See Duda & Hart, for\n",
+      "example.)  The\n",
+      "data set contains 3 classes of 50 instances each, where each\n",
+      "class refers to a\n",
+      "type of iris plant.  One class is linearly separable from the\n",
+      "other 2; the\n",
       "latter are NOT linearly separable from each other.\n",
       "\n",
       ".. topic:: References\n",
       "\n",
-      "   - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+      "   - Fisher, R.A. \"The use of multiple measurements in taxonomic\n",
+      "problems\"\n",
+      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in\n",
+      "\"Contributions to\n",
       "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+      "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and\n",
+      "Scene Analysis.\n",
+      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page\n",
+      "218.\n",
+      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A\n",
+      "New System\n",
+      "     Structure and Classification Rule for Recognition in\n",
+      "Partially Exposed\n",
+      "     Environments\".  IEEE Transactions on Pattern Analysis and\n",
+      "Machine\n",
       "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".\n",
+      "IEEE Transactions\n",
       "     on Information Theory, May 1972, 431-433.\n",
-      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s\n",
+      "AUTOCLASS II\n",
       "     conceptual clustering system finds 3 classes in the data.\n",
       "   - Many, many more ...\n"
      ]
@@ -956,7 +998,7 @@
     "from sklearn import datasets\n",
     "\n",
     "iris = datasets.load_iris()\n",
-    "print(iris.DESCR)"
+    "wrap_print(iris.DESCR)"
    ]
   },
   {
