fix some smaller issues

--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -774,7 +774,7 @@
     "\n",
     "The *conditional entropy* tells us the uncertainty of the classification, if we have perfect information about a feature and is defined as\n",
     "\n",
-    "$$H(C|X') = -\\sum_{x \\in X'} \\sum_{c \\in C} p(c|x) \\log p(c|x)$$\n",
+    "$$H(C|X') = -\\sum_{x \\in X'} p(x) \\sum_{c \\in C} p(c|x) \\log p(c|x)$$\n",
     "\n",
     "where $p(c|x)$ is the probability of observing the class $c$ given the value $x$ of the feature $X' \\in \\{X_1, ..., X_m\\}$. Thus, the conditional entropy is a measure for how much information about the classification is contained in the feature $X'$. The lower the conditional entropy, the smaller the uncertainty about the classification if the feature is known. Thus, features are more *informative*, if the conditional entropy is smaller. When we combine the entropy of the classification and the conditional entropy of the classification if a feature is known, we get the *information gain* as the reduction in uncertainty, i.e., \n",
     "\n",
