fixed some problems in the pdf

--- a/content/05_Association-Rule-Mining.ipynb
+++ b/content/05_Association-Rule-Mining.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide_input"
@@ -56,7 +56,7 @@
        " ['item6', 'item7']]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "hide_input"
@@ -159,7 +159,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0.4</td>\n",
-       "      <td>(item3, item2)</td>\n",
+       "      <td>(item2, item3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -174,11 +174,28 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>0.3</td>\n",
-       "      <td>(item4, item3, item2)</td>\n",
+       "      <td>(item4, item2, item3)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lrl}\n",
+       "\\toprule\n",
+       "{} &  support &               itemsets \\\\\n",
+       "\\midrule\n",
+       "0 &      0.6 &                (item2) \\\\\n",
+       "1 &      0.4 &                (item3) \\\\\n",
+       "2 &      0.6 &                (item4) \\\\\n",
+       "3 &      0.3 &                (item5) \\\\\n",
+       "4 &      0.3 &                (item7) \\\\\n",
+       "5 &      0.4 &         (item2, item3) \\\\\n",
+       "6 &      0.5 &         (item4, item2) \\\\\n",
+       "7 &      0.3 &         (item4, item3) \\\\\n",
+       "8 &      0.3 &  (item4, item2, item3) \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n"
       ],
       "text/plain": [
        "   support               itemsets\n",
@@ -187,13 +204,13 @@
        "2      0.6                (item4)\n",
        "3      0.3                (item5)\n",
        "4      0.3                (item7)\n",
-       "5      0.4         (item3, item2)\n",
+       "5      0.4         (item2, item3)\n",
        "6      0.5         (item4, item2)\n",
        "7      0.3         (item4, item3)\n",
-       "8      0.3  (item4, item3, item2)"
+       "8      0.3  (item4, item2, item3)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,6 +220,7 @@
     "import pandas as pd\n",
     "from mlxtend.frequent_patterns import apriori\n",
     "from mlxtend.preprocessing import TransactionEncoder\n",
+    "pd.set_option('display.latex.repr', True)\n",
     "\n",
     "# we first need to create a one-hot encoding of our transactions\n",
     "te = TransactionEncoder()\n",
@@ -228,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide_input"
@@ -263,49 +281,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(item4, item3)</td>\n",
-       "      <td>(item2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>(item4, item2)</td>\n",
        "      <td>(item3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(item4, item3)</td>\n",
+       "      <td>(item2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(item3, item2)</td>\n",
+       "      <td>(item2, item3)</td>\n",
        "      <td>(item4)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>(item4)</td>\n",
-       "      <td>(item3, item2)</td>\n",
+       "      <td>(item2, item3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(item3)</td>\n",
-       "      <td>(item4, item2)</td>\n",
+       "      <td>(item2)</td>\n",
+       "      <td>(item4, item3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>(item2)</td>\n",
-       "      <td>(item4, item3)</td>\n",
+       "      <td>(item3)</td>\n",
+       "      <td>(item4, item2)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\\toprule\n",
+       "{} &     antecedents &     consequents \\\\\n",
+       "\\midrule\n",
+       "0 &  (item4, item2) &         (item3) \\\\\n",
+       "1 &  (item4, item3) &         (item2) \\\\\n",
+       "2 &  (item2, item3) &         (item4) \\\\\n",
+       "3 &         (item4) &  (item2, item3) \\\\\n",
+       "4 &         (item2) &  (item4, item3) \\\\\n",
+       "5 &         (item3) &  (item4, item2) \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n"
+      ],
       "text/plain": [
        "      antecedents     consequents\n",
-       "0  (item4, item3)         (item2)\n",
-       "1  (item4, item2)         (item3)\n",
-       "2  (item3, item2)         (item4)\n",
-       "3         (item4)  (item3, item2)\n",
-       "4         (item3)  (item4, item2)\n",
-       "5         (item2)  (item4, item3)"
+       "0  (item4, item2)         (item3)\n",
+       "1  (item4, item3)         (item2)\n",
+       "2  (item2, item3)         (item4)\n",
+       "3         (item4)  (item2, item3)\n",
+       "4         (item2)  (item4, item3)\n",
+       "5         (item3)  (item4, item2)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "hide_input"
@@ -398,17 +430,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(item4, item3)</td>\n",
-       "      <td>(item2)</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.666667</td>\n",
-       "      <td>0.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>(item4, item2)</td>\n",
        "      <td>(item3)</td>\n",
        "      <td>0.5</td>\n",
@@ -419,8 +440,19 @@
        "      <td>0.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(item4, item3)</td>\n",
+       "      <td>(item2)</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>0.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(item3, item2)</td>\n",
+       "      <td>(item2, item3)</td>\n",
        "      <td>(item4)</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.6</td>\n",
@@ -432,7 +464,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>(item4)</td>\n",
-       "      <td>(item3, item2)</td>\n",
+       "      <td>(item2, item3)</td>\n",
        "      <td>0.6</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.3</td>\n",
@@ -442,17 +474,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(item3)</td>\n",
-       "      <td>(item4, item2)</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>0.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>(item2)</td>\n",
        "      <td>(item4, item3)</td>\n",
        "      <td>0.6</td>\n",
@@ -462,29 +483,54 @@
        "      <td>1.666667</td>\n",
        "      <td>0.12</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(item3)</td>\n",
+       "      <td>(item4, item2)</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>0.10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
+      "text/latex": [
+       "\\begin{tabular}{lllrrrrrr}\n",
+       "\\toprule\n",
+       "{} &     antecedents &     consequents &  antecedent support &  consequent support &  support &  confidence &      lift &  leverage \\\\\n",
+       "\\midrule\n",
+       "0 &  (item4, item2) &         (item3) &                 0.5 &                 0.4 &      0.3 &        0.60 &  1.500000 &      0.10 \\\\\n",
+       "1 &  (item4, item3) &         (item2) &                 0.3 &                 0.6 &      0.3 &        1.00 &  1.666667 &      0.12 \\\\\n",
+       "2 &  (item2, item3) &         (item4) &                 0.4 &                 0.6 &      0.3 &        0.75 &  1.250000 &      0.06 \\\\\n",
+       "3 &         (item4) &  (item2, item3) &                 0.6 &                 0.4 &      0.3 &        0.50 &  1.250000 &      0.06 \\\\\n",
+       "4 &         (item2) &  (item4, item3) &                 0.6 &                 0.3 &      0.3 &        0.50 &  1.666667 &      0.12 \\\\\n",
+       "5 &         (item3) &  (item4, item2) &                 0.4 &                 0.5 &      0.3 &        0.75 &  1.500000 &      0.10 \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n"
+      ],
       "text/plain": [
        "      antecedents     consequents  antecedent support  consequent support  \\\n",
-       "0  (item4, item3)         (item2)                 0.3                 0.6   \n",
-       "1  (item4, item2)         (item3)                 0.5                 0.4   \n",
-       "2  (item3, item2)         (item4)                 0.4                 0.6   \n",
-       "3         (item4)  (item3, item2)                 0.6                 0.4   \n",
-       "4         (item3)  (item4, item2)                 0.4                 0.5   \n",
-       "5         (item2)  (item4, item3)                 0.6                 0.3   \n",
+       "0  (item4, item2)         (item3)                 0.5                 0.4   \n",
+       "1  (item4, item3)         (item2)                 0.3                 0.6   \n",
+       "2  (item2, item3)         (item4)                 0.4                 0.6   \n",
+       "3         (item4)  (item2, item3)                 0.6                 0.4   \n",
+       "4         (item2)  (item4, item3)                 0.6                 0.3   \n",
+       "5         (item3)  (item4, item2)                 0.4                 0.5   \n",
        "\n",
        "   support  confidence      lift  leverage  \n",
-       "0      0.3        1.00  1.666667      0.12  \n",
-       "1      0.3        0.60  1.500000      0.10  \n",
+       "0      0.3        0.60  1.500000      0.10  \n",
+       "1      0.3        1.00  1.666667      0.12  \n",
        "2      0.3        0.75  1.250000      0.06  \n",
        "3      0.3        0.50  1.250000      0.06  \n",
-       "4      0.3        0.75  1.500000      0.10  \n",
-       "5      0.3        0.50  1.666667      0.12  "
+       "4      0.3        0.50  1.666667      0.12  \n",
+       "5      0.3        0.75  1.500000      0.10  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
