--- a/content/06_Clustering.ipynb
+++ b/content/06_Clustering.ipynb
@@ -1516,17 +1516,17 @@
     "\n",
     "|  []()         | Cluster Shape | Cluster Number | Runtime | Explanatory Value | Concise Representation | \n",
     "|---------------|---------------|----------------|---------|-------------------|------------------------|\n",
-    "| $k$-Means     | -             | -              | o       | +                 | +                      |\n",
-    "| EM Clustering | o             | o              | o       | +                 | +                      |\n",
-    "| DBSCAN        | +             | +              | o       | -                 | -                      |\n",
-    "| SLINK         | +             | o              | o       | +                 | -                      |\n",
+    "| $k$-Means     | $-$           | $-$            | o       | $+$               | $+$                    |\n",
+    "| EM Clustering | o             | o              | o       | $+$               | $+$                    |\n",
+    "| DBSCAN        | $+$           | $+$            | o       | $-$               | $-$                    |\n",
+    "| SLINK         | $+$           | o              | o       | $+$               | $-$                    |\n",
     "\n",
     "|  []()         | Categorical Features | Missing Features | Correlated Features |\n",
     "|---------------|----------------------|------------------|---------------------|\n",
-    "| $k$-Means     | -                    | -                | -                   |\n",
-    "| EM Clustering | -                    | -                | o                   |\n",
-    "| DBSCAN        | -                    | -                | -                   |\n",
-    "| SLINK         | -                    | -                | -                   |"
+    "| $k$-Means     | $-$                  | $-$              | $-$                 |\n",
+    "| EM Clustering | $-$                  | $-$              | o                   |\n",
+    "| DBSCAN        | $-$                  | $-$              | $-$                 |\n",
+    "| SLINK         | $-$                  | $-$              | $-$                 |"
    ]
   }
  ],
