--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -2390,24 +2390,24 @@
     "\n",
     "|  []()                | Decision Surface | Runtime | Explanatory Value | Concise Representation | \n",
     "|----------------------|------------------|---------|-------------------|------------------------|\n",
-    "| $k$-Nearest Neighbor | +                | o       | -                 | -                      |\n",
-    "| Decision Tree        | o                | +       | +                 | +                      |\n",
-    "| Random Forest        | +                | o       | -                 | o                      |\n",
-    "| Logistic Regression  | -                | +       | +                 | +                      |\n",
-    "| Naive Bayes          | -                | +       | -                 | o                      |\n",
-    "| SVM                  | +                | -       | -                 | o                      |\n",
-    "| Neural Network       | +                | -       | -                 | o                      |\n",
+    "| $k$-Nearest Neighbor | $+$              | o       | $-$               | $-$                    |\n",
+    "| Decision Tree        | o                | $+$     | $+$               | $+$                    |\n",
+    "| Random Forest        | $+$              | o       | $-$               | o                      |\n",
+    "| Logistic Regression  | $-$              | $+$     | $+$               | $+$                    |\n",
+    "| Naive Bayes          | $-$              | $+$     | $-$               | o                      |\n",
+    "| SVM                  | $+$              | $-$     | $-$               | o                      |\n",
+    "| Neural Network       | $+$              | $-$     | $-$               | o                      |\n",
     "\n",
     "\n",
     "|  []()                | Scoring | Categorical Features | Missing Features | Correlated Features |\n",
     "|----------------------|---------|----------------------|------------------|---------------------|\n",
-    "| $k$-Nearest Neighbor | -       | -                    | +                | -                   |\n",
-    "| Decision Tree        | +       | +                    | o                | +                   |\n",
-    "| Random Forest        | +       | +                    | o                | +                   |\n",
-    "| Logistic Regression  | +       | o                    | -                | o                   |\n",
-    "| Naive Bayes          | +       | +                    | -                | -                   |\n",
-    "| SVM                  | -       | o                    | -                | -                   |\n",
-    "| Neural Network       | +       | o                    | -                | +                   |"
+    "| $k$-Nearest Neighbor | $-$     | $-$                  | $+$              | $-$                 |\n",
+    "| Decision Tree        | $+$     | $+$                  | o                | $+$                 |\n",
+    "| Random Forest        | $+$     | $+$                  | o                | $+$                 |\n",
+    "| Logistic Regression  | $+$     | o                    | $-$              | o                   |\n",
+    "| Naive Bayes          | $+$     | $+$                  | $-$              | $-$                 |\n",
+    "| SVM                  | $-$     | o                    | $-$              | $-$                 |\n",
+    "| Neural Network       | $+$     | o                    | $-$              | $+$                 |"
    ]
   }
  ],
