fix html tables in pdf (ugly, but works)

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "Open Layout Issues:\n",
     "\n",
-    "- Some issues in the PDF (e.g., HTML tables)\n",
+    "- Some issues in the PDF, mainly line overflows\n",
     "\n",
     "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
