fix formatting problems

--- a/content/Appendix.ipynb
+++ b/content/Appendix.ipynb
@@ -40,9 +40,9 @@
     "| $h'_c$ | Score based hypothesis that computes the scores for the class $c$ |\n",
     "| $P(X=x)$ | Probability that the random variable $X$ is realized by the value $x$. \n",
     "| $p(x)$ | $p(x) = P(X=x)$ for a random variable $x$.\n",
-    "| $P(X|Y)$ | Conditional probability of the random variable $X$ given the random variable $Y$. \n",
+    "| $P(X \\vert Y)$ | Conditional probability of the random variable $X$ given the random variable $Y$. \n",
     "| $H(X)$ | Entropy of the random variable $X$. |\n",
-    "| $H(X|Y)$ | Conditional entropy of the random variable $X$ given the random variable $Y$.\n",
+    "| $H(X \\vert Y)$ | Conditional entropy of the random variable $X$ given the random variable $Y$.\n",
     "| $I(X; Y)$ | Information gain for $X$/$Y$ if the other variable is known. Also known as mutual information. |\n",
     "| $e_x$ | Residual of a regression. |\n",
     "| $x_t$ | Values of a time series $\\{x_1, ..., x_T\\} = \\{x_t\\}_{t=1}^T$. \n",
