fix formatting problems

--- a/content/Appendix.ipynb
+++ b/content/Appendix.ipynb
@@ -22,7 +22,7 @@
     "| $X$ (association rules) | Antecedent of an association rule. |\n",
     "| $Y$ (association rules) | Consequent of an association rule. |\n",
     "| $X \\Rightarrow Y$ | Association rule where $Y$ is a consequent of $X$. |\n",
-    "| ${n \\choose k}$ | The binomial coefficient ${n \\choose k} = \\frac{|I|!}{(|I|-k)!k!}$. |\n",
+    "| ${n \\choose k}$ | The binomial coefficient ${n \\choose k} = \\frac{n!}{(n-k)!k!}$. |\n",
     "| $\\mathcal{P}(I)$ | The power set of a finite set $I$. |\n",
     "| $\\vert \\cdot \\vert$ | Cardinality of a set, e.g., $\\vert X \\vert$ for the number of elements of $X$ |\n",
     "| $d(x,y)$ | Distance between two vectors $x$ and $y$, e.g., Euclidean distance, Manhattan distance, or Chebyshev distance. |\n",
