update preface and pdf

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -66,13 +66,10 @@
     "- Chapter 12: Draft finished, requires proof reading.\n",
     "- Exercises: Finished.\n",
     "- Solutions: Finished.\n",
-    "- Appendix: Work in progress.\n",
+    "- Appendix: Finished.\n",
     "\n",
-    "Open Layout Issues:\n",
     "\n",
-    "- Some issues in the PDF, mainly line overflows\n",
-    "\n",
-    "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
+    "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, formatting problems on the Website or in the PDF), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
   }
  ],
