fix problem with seasonal adjustment

--- a/content/09_Time-Series-Analysis.ipynb
+++ b/content/09_Time-Series-Analysis.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "hide_input"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide_input"
@@ -161,9 +161,9 @@
     "\n",
     "The plot on the right shows the time series without the trend. We see that there is no increasing trend anymore, the values seem to be centered around zero. This means that the trend was successfully removed. We also observe that the range of the values on the y-axis decreased from $600-100=500$ to $150-(-100)=250$. This means that the trend explains about fifty percent of magnitude the change in the values over time. \n",
     "\n",
-    "However, we still observe that there is a regular pattern in the fluctuation around zero. This is the seasonality of the data. Recall that the data we use are monthly measurements. Therefore, it is a reasonable conjecture that the seasonality that we observe is a recurring pattern in the same month every year. We can further explore this by adjusting the seasonality through the *seasonal mean*. To calculate the seasonal mean, we must know the length of a season, i.e., after how many time steps the seasonal pattern repeats itself. In case of the sample data, we have a *monthly mean* with a length of $s=12$ timesteps for the seasons. We can then calculate the seasonal pattern as the difference of the overall mean of the detrended time series and the seasonal mean, i.e.,\n",
+    "However, we still observe that there is a regular pattern in the fluctuation around zero. This is the seasonality of the data. Recall that the data we use are monthly measurements. Therefore, it is a reasonable conjecture that the seasonality that we observe is a recurring pattern in the same month every year. We can further explore this by adjusting the seasonality through the *seasonal mean*. To calculate the seasonal mean, we must know the length of a season, i.e., after how many time steps the seasonal pattern repeats itself. In case of the sample data, we have a *monthly mean* with a length of $s=12$ timesteps for the seasons. We can then calculate the seasonal pattern as the difference of the overall mean of the detrended time series and the seasonal mean and substract this from the detrended time series, i.e.,\n",
     "\n",
-    "$$\\hat{\\hat{x}}_t = mean(\\{\\hat{x}_t\\})-mean(\\{\\hat{x}_{t'}\\}_{\\{t' \\in 1, ..., T: mod(t',s)=mod(t,s)\\}})$$\n",
+    "$$\\hat{\\hat{x}}_t = \\hat{x}_t - (mean(\\{\\hat{x}_{t'}\\}_{\\{t' \\in 1, ..., T: mod(t',s)=mod(t,s)\\}}-mean(\\{\\hat{x}_t\\}))$$\n",
     "\n",
     "where $mod(t,s)$ is the modulo of $t$ divided by $s$. For example, if we have $s=12$ and $t=26$, $mod(t, s)=2$. In that case, the seasonal mean would be calculated over all values $t'$ where $mod(t', s)=2$, i.e., 2, 14, 26, 38, etc.\n",
     "\n",
@@ -195,6 +195,7 @@
    "source": [
     "monthly_means = air_passengers_detrended.groupby(air_passengers_detrended.index.month).mean()\n",
     "\n",
+    "# mean of detrended data is zero\n",
     "air_passengers_detrended_unseasonal = air_passengers_detrended - np.tile(monthly_means,12)\n",
     "\n",
     "f, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
