--- a/content/09_Time-Series-Analysis.ipynb
+++ b/content/09_Time-Series-Analysis.ipynb
@@ -241,7 +241,7 @@
     "\n",
     "With the first order difference, we detrend time series that have a moving mean value, i.e., $\\hat{x}_t = \\Delta^1 x_t$. If both the mean value as well as the change of the mean are moving, we can use *second-order differencing*, which is defined as \n",
     "\n",
-    "$$\\Delta^2 x_t = \\Delta^1 x_t - \\Delta^1 x_{t-1} ) = x_t - 2\\cdot x_{t-1} + x_{t-2}.$$\n",
+    "$$\\Delta^2 x_t = \\Delta^1 x_t - \\Delta^1 x_{t-1} = x_t - 2\\cdot x_{t-1} + x_{t-2}.$$\n",
     "\n",
     "When we apply first-order differencing to our example, we get the following. "
    ]
