fix another typo

--- a/content/09_Time-Series-Analysis.ipynb
+++ b/content/09_Time-Series-Analysis.ipynb
@@ -485,7 +485,7 @@
     "\n",
     "The AR models model a linear relationship between the timesteps. They model the *direct* influence of the past points $p$ in time on the current point in time as\n",
     "\n",
-    "$$c + \\epsilon_t \\sum_{i=1}^p a_ix_{t-i}$$\n",
+    "$$c + \\epsilon_t + \\sum_{i=1}^p a_ix_{t-i}$$\n",
     "\n",
     "where $c \\in \\mathbb{R}$ is a constant change over time, $\\epsilon_t$ is *white noise*, and $a_i \\in \\mathbb{R}, i=1, ..., p$ are coefficients that determine the influence past values of the time series. Thus, the AR model combines a fixed change $c$, with a random change $\\epsilon_t$ and the last $p$ values of the time series. \n",
     "\n",
