--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "The histogram on the left looks like it has a bell shape, which indicates that the data may be normal. However, we cannot be sure, without additional analysis. It would also be possible that the data just randomly looks like that, i.e., is some outlier and that the data is not really normal. \n",
     "\n",
-    "The histogram on the left shows two samples $X_1 = \\{x_1^1, ..., x_{n_1}^1\\}$ (\"blue\") and $X_2 = \\{x_1^2, ..., x_{n_2}^2\\}$ (\"orange\"). Both look similar, but it looks like the mean value of the blue data may be a bit smaller than that of the orange data. However, this could also just be a random effect, and there is no real difference. \n",
+    "The histogram on the right shows two samples $X_1 = \\{x_1^1, ..., x_{n_1}^1\\}$ (\"blue\") and $X_2 = \\{x_1^2, ..., x_{n_2}^2\\}$ (\"orange\"). Both look similar, but it looks like the mean value of the blue data may be a bit smaller than that of the orange data. However, this could also just be a random effect, and there is no real difference. \n",
     "\n",
     "Statistics gives us the methods we need to get (probabilistic) answers to these questions. Within this Chapter, we give a short introduction into the (quite large) world of statistics. Upon completion of this chapter, you should know what hypothesis testing is, how this can be used correctly, and why hypothesis testing is often not useful, if used without additional statistical tools like effect size and confidence intervals. "
    ]
